Fixed QR code on mobile?

--- a/css/player.css
+++ b/css/player.css
@@ -23,7 +23,7 @@ main {
 #reader {
     max-width: fit-content;
     max-height: 50vh;
-    margin: auto;
+    margin: 0;
 }
 
 #reader video {
@@ -126,19 +126,19 @@ main {
     background-color: var(--red); /* Change the background color for Microsoft Edge */
   }
 
-  #qr-code {
+  #qr-code:not(.hidden){
     display: flex;
     flex-direction: column;
-    height: 50vh;
+    height: 49vh;
   }
 
   /*QR CODE*/
   #qr-code img {
     /*center with margins doesn't work on mobile*/
-    height: 100%;
+    height: 90%;
     width: auto;
     aspect-ratio: 1 / 1;  /* defining the aspect ratio of the imaage */
-    object-fit: cover;  
+    object-fit: contain;  
   }
 
   #qr-code p {
